--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeNoActionBar">
+        <activity android:name=".LoginActivity"></activity>
         <activity
             android:name=".ChatActivity"
-            android:theme="@style/ChatTheme"></activity>
+            android:theme="@style/ChatTheme" />
         <activity android:name=".InfoActivity" />
         <activity
             android:name=".AddActivity"
