--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,24 @@
     package="com.comshelin.comshelinguide">
 
     <application
+        android:name=".CGApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeNoActionBar">
-        <activity android:name=".RecipeInfoActivity"></activity>
-        <activity android:name=".RecipeAddActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".ui.recipe_info.RecipeInfoActivity"></activity>
+        <activity android:name=".ui.recipe_add.RecipeAddActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".ui.chat.ChatActivity"
             android:theme="@style/ChatTheme" />
-        <activity android:name=".InfoActivity" />
+        <activity android:name=".ui.info.InfoActivity" />
         <activity
-            android:name=".AddActivity"
+            android:name=".ui.add.AddActivity"
             android:theme="@style/ChatTheme" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
